<resources>
    <string name="app_name">Guribile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="worker_name">Worker Name</string>
    <string name="phone">phone</string>
    <string name="message">message</string>
    <string name="created_at">created_at</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="id">id</string>
    <string name="todo">TODO</string>
    <string name="select_date">Select Date</string>
    <string name="please_select_time">Please Select Time</string>
    <string name="briefly_describe_your_problem_optional">Briefly Describe your problem (optional)</string>
    <string name="submit">Submit</string>
    <string name="you_don_t_have_any_more_requests">You don\'t have any more requests</string>
    <string name="cleaning_service">Cleaning Service</string>
    <string name="carpentry_services">Carpentry Services</string>
    <string name="plumbing">Plumbing</string>
    <string name="electric_work">Electric Work</string>
    <string name="painting_and_decorator">Painting and Decorator</string>
    <string name="furniture_transfer">Furniture Transfer</string>
    <string name="satellite_technician">Satellite Technician</string>
    <string name="electronic_device_work">Electronic device work</string>
    <string name="aluminium_work">Aluminium work</string>
    <string name="welding_work">Welding work</string>
    <string name="furniture_fitting">Furniture Fitting</string>
    <string name="carpet_cleaning_work">Carpet Cleaning Work</string>
    <string name="air_condition">Air condition</string>
    <string name="pest_killer">Pest killer</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="somali">Somali</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="_252">+252</string>
    <string name="add_your_number_somalia_only">Add your number (Somalia only)</string>
    <string name="no_service_provider_available_yet">No Service Provider Available Yet..!</string>
    <string name="personal_info">Personal Info</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="aaaaaaaa">* * * * * *</string>
    <string name="sign_in">Sign In</string>
    <string name="resend">Resend</string>
    <string name="done">Done</string>
    <string name="msg">message</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="rate">Rate</string>
    <string name="rejectedd">Rejected</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="completed_services">Completed Services</string>
    <string name="accepted_services">Accepted Services</string>
    <string name="declined_services">Declined Services</string>
    <string name="pending_services">Pending Services</string>
    <string name="rate_work">Rate Work</string>
</resources>
