<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:layout_margin="5dp"
    tools:context=".Activities.RegisterActivity">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/ic_action_profile"
        android:contentDescription="@string/todo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_info"
        android:layout_gravity="center"
        android:textColor="@color/Black"
        android:layout_margin="10dp"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/edt_name"
        android:hint="@string/enter_your_name"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:textColorHint="@color/Black"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:background="@drawable/edittext_bg"
        tools:ignore="Autofill" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/enter_your_email"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/Black"
        android:id="@+id/edt_email"
        android:padding="5dp"
        android:background="@drawable/edittext_bg"
        tools:ignore="Autofill" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:hint="@string/phone_number"
        android:id="@+id/edt_number"
        android:layout_gravity="center"
        android:editable="false"
        android:inputType="phone"
        android:layout_margin="10dp"
        android:textColorHint="@color/Black"
        android:padding="5dp"
        android:background="@drawable/edittext_bg"
        tools:ignore="Autofill,Deprecated" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/register_button"
        android:background="@drawable/btn_rounded_corner"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:textSize="20sp"/>

</LinearLayout>