<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activities.ActivityLogin">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_action_profile"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_mobile_number"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:textColor="@color/Black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/somalia_flag"
            android:layout_weight="1"
            android:contentDescription="@string/todo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_252"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/Black"/>

        <EditText
            android:id="@+id/number"
            android:layout_weight="10"
            android:inputType="number"
            android:layout_width="0dp"
            android:padding="5dp"
            android:layout_height="match_parent"
            android:textColorHint="@color/Black"
            android:hint="@string/add_your_number_somalia_only"
            tools:ignore="Autofill" />

    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_corner"
        android:textColor="@color/Black"
        android:text="@string/sign_in"
        android:layout_margin="10dp"
        android:textSize="20sp"/>

</LinearLayout>