<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activities.VerificationCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/aaaaaaaa"
            android:inputType="number"
            android:maxLength="6"
            android:textColorHint="@color/Black"
            android:id="@+id/code"
            tools:ignore="Autofill" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:background="@drawable/btn_rounded_corner"
        android:id="@+id/sign_in"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resend"
        android:textSize="20sp"
        android:textColor="@color/Black"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/resend"/>

</LinearLayout>