<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Appointment_fix">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/Date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:clickable="true"
                android:padding="10dp"
                android:background="@drawable/edittext_bg"
                android:textColorHint="@color/Black"
                android:editable="false"
                android:hint="@string/select_date"
                tools:ignore="Autofill,Deprecated,TextFields"
                android:focusable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="15sp"
                android:visibility="gone"
                android:id="@+id/error_time"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:text="@string/please_select_time"/>

            <TimePicker
                android:layout_marginTop="10dp"
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="10dp"
                android:inputType="text|textMultiLine"
                android:background="@drawable/edittext_bg"
                android:textColorHint="@color/Black"
                android:hint="@string/briefly_describe_your_problem_optional"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:background="@drawable/btn_rounded_corner"
                android:text="@string/submit"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>