<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear4"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            app:cardCornerRadius="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true">

            <LinearLayout
                android:id="@+id/linear44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#66666666">
                <!--horizontal layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    tools:ignore="DisableBaselineAlignment">


                    <LinearLayout
                        android:padding="10dp"
                        android:layout_weight="9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:padding="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:id="@+id/id"
                            android:text="@string/id"
                            android:visibility="gone"/>

                        <TextView
                            android:padding="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/worker_name"
                            android:visibility="visible"
                            android:id="@+id/title"/>

                        <TextView
                            android:padding="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/phone"
                            android:id="@+id/status"
                            />

                        <TextView
                            android:padding="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/message"
                            android:visibility="visible"
                            android:id="@+id/message"
                            />

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/created_at"
                            android:textColor="#000000"
                            android:id="@+id/created_at"
                            android:visibility="gone"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="10dp"
                            app:srcCompat="@drawable/info"
                            android:id="@+id/info"
                            android:padding="10dp"
                            android:layout_marginStart="10dp"
                            android:contentDescription="@string/todo" />

                    </LinearLayout>
                </LinearLayout>
                <!--horizontal layout end-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="@color/lightgray" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/accept"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:textSize="15sp"
                            android:padding="10dp"
                            android:textColor="@color/colorGreen"
                            android:textStyle="bold"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/mark_as_completed"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>