<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linear4"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:foreground="?attr/selectableItemBackground"
            android:clickable="true"
            app:cardCornerRadius="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true">

            <LinearLayout
                android:id="@+id/linear44"
                android:background="#66666666"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--horizontal layout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    tools:ignore="DisableBaselineAlignment">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:id="@+id/info"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:src="@drawable/add_user"
                            app:civ_border_width="2dp"
                            app:civ_border_color="@color/colorPrimary"/>

                    </LinearLayout>
                    <LinearLayout

                        android:layout_weight="9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:padding="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:id="@+id/id"
                            android:text="@string/id"
                            android:visibility="gone"/>

                        <TextView
                            android:padding="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/worker_name"
                            android:textSize="20sp"
                            android:visibility="visible"
                            android:id="@+id/title"/>

                        <TextView
                            android:padding="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/phone"
                            android:id="@+id/status"
                            />

                        <TextView
                            android:padding="2dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/msg"
                            android:visibility="visible"
                            android:id="@+id/message"
                            />

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/created_at"
                            android:textColor="#000000"
                            android:id="@+id/created_at"
                            android:visibility="gone"/>

                    </LinearLayout>
                </LinearLayout>
                <!--horizontal layout end-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="@color/lightgray" />
                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:padding="5dp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</RelativeLayout>